# anti-spam-matrix

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.toml.example
.github/: dependabot.yml
.github/workflows/: ci-build.yml
src/: auth.rs  config.rs  main.rs  utils.rs
