[package]
name = "anti-spam-matrix"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"

crossbeam-skiplist = "0.1.3"

matrix-sdk = { version = "0.7.1", features = [
    "anyhow",
    "automatic-room-key-forwarding",
    "native-tls",
    "sso-login",
], default-features = false }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0.197", features = ["derive", "alloc"] }
serde_json = "1"
toml = "0.8.12"

regex = "1.10.4"
open = "5.1.2"
directories = "5.0.1"

[features]
default = ["native-tls", "socks"]
native-tls = ["matrix-sdk/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls"]
# required to support socks5 proxy
socks = ["matrix-sdk/socks"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
