[package]
name = "anti-spam-matrix"
version = "0.1.4"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"

crossbeam-skiplist = "0.1.3"

matrix-sdk = { version = "0.7.1", features = [
    "anyhow",
    "automatic-room-key-forwarding",
    "native-tls",
    "sso-login",
], default-features = false }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0.214", features = ["derive", "alloc"] }
serde_json = "1"
toml = "0.8.19"

regex = "1.11.1"
open = "5.3.1"
directories = "5.0.1"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "smallvec",
], default-features = false }

[features]
default = ["native-tls", "socks"]
native-tls = ["matrix-sdk/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls"]
# required to support socks5 proxy
socks = ["matrix-sdk/socks"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
