[package]
name = "anti-spam-matrix"
version = "0.1.4"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"

crossbeam-skiplist = "0.1.3"

matrix-sdk = { version = "0.14.0", features = [
    "anyhow",
    "automatic-room-key-forwarding",
    "sso-login",
], default-features = false }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0.224", features = ["derive", "alloc"] }
serde_json = "1"
toml = "0.9.6"

regex = "1.11.2"
open = "5.3.2"
directories = "6.0.0"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
    "smallvec",
], default-features = false }

std = { version = "0.22.0", package = "eyra", optional = true }

[features]
default = ["native-tls", "socks"]
native-tls = ["matrix-sdk/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls"]
# required to support socks5 proxy
socks = ["matrix-sdk/socks"]

eyra-as-std = ["dep:std"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
